NNO-10983 Не работают fail-out после удаления диалога